# journal-viewer

./: .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  package-lock.json  package.json  tsconfig.config.json  vite.config.ts
.github/: release.yaml
.github/scripts/: build-artifacts.sh  build-dev.sh  build-release.sh  build.sh
.github/workflows/: build.yaml  release-debian22.04.yaml  release-ubuntu20.04.yaml  release-ubuntu22.04.yaml  release.yaml
docs/: publish_new_version.md
package/: PKGBUILD-bin.tmpl  PKGBUILD-src.tmpl  PKGBUILD.tmpl  journal-viewer.desktop
pages/: _app.tsx  index.tsx
src/: App.vue  journal.rs  libsdjournal.rs  main.rs  main.ts  query_builder.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: boot.rs  journal.rs  journal_controller.rs  journal_entries.rs  journal_fields.rs  libsdjournal.rs  libsdjournal_bindings.rs  main.rs  monitor_controller.rs  query.rs  query_builder.rs  unit.rs
src-tauri/src/journal/: journal_entries.rs  libsdjournal.rs  libsdjournal_bindings.rs  mod.rs  query.rs  query_builder.rs  unit.rs
src-tauri/src/monitor/: NOTES.md  cmdline.rs  fd.rs  mod.rs  pid_stat.rs  process_status.rs  smaps_rollup.rs  stat.rs  system_status.rs  uptime.rs
src-tauri/tests/fixtures/: stat  uptime
src-tauri/tests/fixtures/1/: smaps_rollup  stat
src/common/: DateFormatter.ts
src/components/: FilterSidebar.vue  LogTable.vue  ProcessTable.vue  SearchBar.vue  SummaryBar.vue
src/model/: Boot.ts  Filter.ts  JournalEntries.ts  Process.ts  ProcessQuery.ts  Unit.ts
src/pages/: LogViewer.vue  SystemMonitor.vue
