[package]
authors = ["Victor Mingueza"]
default-run = "journal-viewer"
description = "A modern desktop log viewer for systemd journal"
edition = "2021"
license = "GPL 3.0"
name = "journal-viewer"
repository = "https://github.com/mingue/journal-viewer"
rust-version = "1.69"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1", features = [] }

[dependencies]
anyhow = "1.0.75"
bitflags = "2"
chrono = "0.4"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "1", features = [] }
thiserror = "1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
