[package]
authors = ["Victor Mingueza"]
default-run = "journal-viewer"
description = "A modern desktop log viewer for systemd journal"
edition = "2024"
license = "GPL 3.0"
name = "journal-viewer"
repository = "https://github.com/mingue/journal-viewer"
rust-version = "1.85"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
anyhow = "1"
bitflags = "2"
chrono = "0.4"
env_logger = "0.11"
lazy_static = "1"
libc = "0.2"
nom = "7"
rayon = "1"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["chrono"] }
tauri = {version = "2", features = [] }
thiserror = "1"
tracing = {version = "0.1.41", features = ["log", "attributes"] }
tracing-subscriber = {version = "0.3.19", features = ["std", "env-filter"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
